--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,24 +1,56 @@
 #main-container{
   margin: 40px 0px 40px 0px;
   padding: 30px;
-  background-color: rgb(75, 75, 75);
+  background-color: rgb(87, 85, 201);
   height: 460px;
 
 }
 
-#links-container{
-  display: flex;
-  flex-flow: column nowrap;
-  text-align: center;
-}
-
 a {
   text-decoration: none;
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   margin: 10px;
 }
 
 #informations-container{
   text-align: center;
   margin-bottom: 40px;
+}
+
+.Front-End-Projects {
+  border: 1px solid black;
+  width: 28%;
+  height: 50%;
+  margin-top: 50px;
+  background-image: url('../images/FundoBotaoFrontEnd.jpg');
+}
+
+.paragraph-Front-End {
+ color: white !important;
+ font-size: 30px;
+ font-family: monospace;
+}
+
+.projects-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.links-container {
+ display: flex;
+}
+
+.links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  height: 200px;
+  padding: 30px;
+  width: 80%;
+}
+
+#icon-back {
+  width: 50px;
 }
