--- a/src/styles/footerFront.css
+++ b/src/styles/footerFront.css
@@ -7,6 +7,7 @@
   background-color: rgb(75, 75, 75);
   align-items: center;
   justify-content: space-around;
+  margin-top: 50px;
 }
 
 #icongit-front {
