--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,14 +1,14 @@
 #main-container{
   margin: 40px 0px 40px 0px;
   padding: 30px;
-  background-color: rgb(87, 85, 201);
+  background-color: rgb(0, 0, 0);
   height: 460px;
 
 }
 
 a {
   text-decoration: none;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   margin: 10px;
 }
 
@@ -34,23 +34,42 @@ a {
 .projects-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  background-color: rgb(0, 0, 0);
 }
 
 .links-container {
- display: flex;
-}
-
-.links {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   border: 1px solid black;
   height: 200px;
   padding: 30px;
   width: 80%;
+  margin: auto;
+  margin-top: 30px;
+  background-image: url('../images/FundoBotaoFrontEnd.jpg');
+  background-size: cover;
+  margin-bottom: 20px;
 }
 
-#icon-back {
-  width: 50px;
+
+#paragraphProjects {
+  color: white;
+
+}
+
+#ttileProjects {
+  color: white;
+}
+
+.links-projects {
+  font-size: 40px;
+  font-family: monospace;
+  font-weight: 900;
+}
+
+.Descriptions-Projects {
+  color: white;
+  text-align: justify;
 }
