--- a/src/styles/navigationBar.css
+++ b/src/styles/navigationBar.css
@@ -1,28 +1,27 @@
 .navigationBar {
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-    background-color: rgb(75, 75, 75);
-    padding: 20px;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: space-around;
+  background-color: white;
 }
 
-#logo-trybe{
-    width: 50px;
+.links-container-header {
+  display: flex;
+  width: 40%;
+  flex-direction: row;
+  margin: auto;
+  justify-content: space-around;
 }
 
-.linkpath{
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    font-size: 18px;
-   
+.empty-header-container {
+  width: 50%;
 }
 
-.linkpath:hover {
-    background-color: black;
-    font-size: 20px;
+.linkpath {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  font-size: 18px;
 }
 
 #icon-back-header {
- width: 50px;
+  width: 30px;
 }
