--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,9 +1,8 @@
-#main-container{
-  margin: 40px 0px 40px 0px;
-  padding: 30px;
+#main-container {
+  margin: 10px 0px 40px 0px;
+  padding: 20px;
   background-color: rgb(0, 0, 0);
   height: 460px;
-
 }
 
 a {
@@ -12,7 +11,7 @@ a {
   margin: 10px;
 }
 
-#informations-container{
+#informations-container {
   text-align: center;
   margin-bottom: 40px;
 }
@@ -22,13 +21,13 @@ a {
   width: 28%;
   height: 50%;
   margin-top: 50px;
-  background-image: url('../images/FundoBotaoFrontEnd.jpg');
+  background-image: url("../images/FundoBotaoFrontEnd.jpg");
 }
 
 .paragraph-Front-End {
- color: white !important;
- font-size: 30px;
- font-family: monospace;
+  color: white !important;
+  font-size: 30px;
+  font-family: monospace;
 }
 
 .projects-container {
@@ -48,15 +47,13 @@ a {
   width: 80%;
   margin: auto;
   margin-top: 30px;
-  background-image: url('../images/FundoBotaoFrontEnd.jpg');
+  background-image: url("../images/FundoBotaoFrontEnd.jpg");
   background-size: cover;
   margin-bottom: 20px;
 }
 
-
 #paragraphProjects {
   color: white;
-
 }
 
 #ttileProjects {
